--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,26 @@
  * Create: 26 June 2015
  * Modified: 26 June 2015
  * ------------------------------------------------------------------------------------------- */
-
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   padding-top: 50px;
   padding-bottom: 20px;
+  margin-bottom: 60px;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /*height: 60px;*/
+  background-color: #f5f5f5;
+}
+.footer p {
+	padding: 15px;
 }
