--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,133 @@ body {
 .footer p {
 	padding: 15px;
 }
+
+/**
+ * Header
+ */
+.hero-wrap {
+  height: 220px;
+  background-size: cover;
+  background-position: center center;
+  margin-bottom: 60px;
+  color: #fff;
+  font-family: 'Droid Serif', serif;
+  text-shadow: 0 0 4px rgba(0,0,0,.4);
+  box-shadow: 0 3px 10px rgba(0,0,0,.6);
+}
+.hero-wrap h1 {
+  font-weight: bold;
+  font-size: 48px;
+}
+
+
+/**
+ * Item Data
+ */
+.item-popup {
+  position: relative;
+  display: block;
+}
+.item-popup figure {
+  position: relative;
+  overflow: hidden;
+  margin: 10px 1%;
+  max-height: 360px;
+  text-align: center;
+  opacity: .9;
+  cursor: pointer;
+  background-color: #000;
+}
+.item-popup figure img {
+  position: relative;
+  display: block;
+  min-height: 100%;
+  max-width: 100%;
+  opacity: .9;
+  width: 100%;
+  transition:.3s ease;
+  transition-delay: .1s;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
+.item-popup:hover figure img {
+  opacity: 0.6;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.item-popup .item-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.item-popup .name {
+  position: absolute;
+  left: 20px;
+  top: 30px;
+  color: #fff;
+  text-shadow: 0 0 6px rgba(0,0,0,.6);
+  font-size: 24px;
+  right: 20px;
+
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(0,20px,0);
+  transform: translate3d(0,20px,0);
+}
+.item-popup .profile {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  color: #fff;
+  border: 1px solid rgba(255,255,255,.4);
+  background-color: rgba(255,255,255,.2);
+  padding: 10px 15px;
+  -webkit-transform: translate3d(0,40px,0);
+  transform: translate3d(0,40px,0);
+}
+.item-popup .profile ul {
+  padding: 0;
+  margin: 0;
+}
+.item-popup:hover .name {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+.item-popup .name:after {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #fff;
+  content: '';
+  box-shadow: 0 0 6px rgba(0,0,0,.6);
+  -webkit-transform: translate3d(0,30px,0);
+  transform: translate3d(0,30px,0);
+}
+.item-popup .name:after,
+.item-popup .profile {
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+}
+.item-popup:hover .name:after,
+.item-popup:hover .profile {
+  opacity: 1;
+  -webkit-transform: translate3d(0,10px,0);
+  transform: translate3d(0,10px,0);
+  transition-delay: .3s;
+}
+.item-popup:hover .profile {
+  transition-delay: .5s;
+}
+
+
+
